@@ -420,7 +420,6 @@
                                 <option>tty</option>,
                                 <option>syslog</option>,
                                 <option>journal</option>,
-                                <option>syslog+console</option>,
                                 <option>journal+console</option> or
                                 <option>socket</option>. If set to
                                 <option>inherit</option>, the file
@@ -449,8 +448,7 @@
                                 to syslog is implicitly stored
                                 in the journal as well, those options
                                 are hence supersets of this
-                                one). <option>syslog+console</option> and
-                                <option>journal+console</option> work
+                                one). <option>journal+console</option> work
                                 similarly but copy the output to the
                                 system console as
                                 well. <option>socket</option> connects
